; ModuleID = '/home/carl/AnghaBench/linux/drivers/tty/extr_n_gsm.c_gsm_destroy_network.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/tty/extr_n_gsm.c_gsm_destroy_network.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gsm_dlci = type { i32 }
%struct.gsm_mux_net = type { i32 }

@.str = private unnamed_addr constant [26 x i8] c"destroy network interface\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.gsm_dlci*)* @gsm_destroy_network to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @gsm_destroy_network(%struct.gsm_dlci* %0) #0 {
  %2 = alloca %struct.gsm_dlci*, align 8
  %3 = alloca %struct.gsm_mux_net*, align 8
  store %struct.gsm_dlci* %0, %struct.gsm_dlci** %2, align 8
  %4 = call i32 @pr_debug(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0))
  %5 = load %struct.gsm_dlci*, %struct.gsm_dlci** %2, align 8
  %6 = getelementptr inbounds %struct.gsm_dlci, %struct.gsm_dlci* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %10, label %9

9:                                                ; preds = %1
  br label %17

10:                                               ; preds = %1
  %11 = load %struct.gsm_dlci*, %struct.gsm_dlci** %2, align 8
  %12 = getelementptr inbounds %struct.gsm_dlci, %struct.gsm_dlci* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call %struct.gsm_mux_net* @netdev_priv(i32 %13)
  store %struct.gsm_mux_net* %14, %struct.gsm_mux_net** %3, align 8
  %15 = load %struct.gsm_mux_net*, %struct.gsm_mux_net** %3, align 8
  %16 = call i32 @muxnet_put(%struct.gsm_mux_net* %15)
  br label %17

17:                                               ; preds = %10, %9
  ret void
}

declare dso_local i32 @pr_debug(i8*) #1

declare dso_local %struct.gsm_mux_net* @netdev_priv(i32) #1

declare dso_local i32 @muxnet_put(%struct.gsm_mux_net*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
